Fixed tab strip
which would line break on mobile devices.

--- a/assets/style.css
+++ b/assets/style.css
@@ -36,7 +36,8 @@ h1 {
 .main-panel {
     position: absolute;
     left: 20%;
-    width: 60%;
+    max-width: 60%;
+    min-width: 650px;
     top: 10%;
     max-height: 80%;
     box-shadow: 0px 30px 30px -10px rgb(0,0,0,0.25);
@@ -48,7 +49,7 @@ h1 {
     border-bottom-style: solid;
     border-bottom-width: 1px;
     border-bottom-color: #808080;
-    margin-right: 10px;
+    overflow-x: hidden;
 }
 
 .tabstrip .tab {
@@ -77,13 +78,13 @@ h1 {
     outline: none;
     font-size: 12pt;
     text-decoration: none;
-    margin-right: 2px;
+    margin-right: 0px;
 }
 
 .tabstrip .tab.selected {
     background-color: #C6D633;
     color: #000000;
-    box-shadow: 0 0px 50px 3px rgb(198,214,51,0.5);
+    box-shadow: 0 0px 80px 5px rgb(198,214,51,0.5);
     border-color: #F6FF70;
 }
 
